--- a/lauras-hen-site/src/index.css
+++ b/lauras-hen-site/src/index.css
@@ -4,14 +4,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: black;
-  color: #FECBEE;
+  color: #fecbee;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family:
+    source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
-
 
 @keyframes fade-in {
   from {
